--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "@nuxt/image": "^1.3.0",
     "@radix-icons/vue": "^1.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "nuxt": "^3.10.1",
-    "radix-vue": "^1.4.1",
+    "radix-vue": "^1.4.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.3",
     "shadcn-nuxt": "^0.9.0"
   }
