--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/tailwindcss": "^6.11.3",
+    "nuxt-icon": "^0.6.8",
     "shadcn-nuxt": "^0.9.0"
   }
 }
