--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.3.0",
+    "@nuxt/ui": "^2.13.0",
     "@radix-icons/vue": "^1.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
